--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta http-equiv="refresh" content="0; url=https://www.ejemplo.com">
+  <title>Redireccionando...</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <p>Si no eres redirigido automáticamente, <a href="https://www.ejemplo.com">haz clic aquí</a>.</p>
 </body>
 </html>
