--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.ejemplo.com">
+  <meta http-equiv="refresh" content="0; url=dscraft/index.html">
   <title>Redireccionando...</title>
 </head>
 <body>
