--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=dscraft/index.html">
+  <meta http-equiv="refresh" content="0; url=https://jmct1980.github.io/dscraft/dscraft/">
   <title>Redireccionando...</title>
 </head>
 <body>
