--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://jmct1980.github.io/dscraft/dscraft/index.html">
-  <title>Redireccionando...</title>
-</head>
-<body>
-  <p>Si no eres redirigido automáticamente, <a href="https://www.ejemplo.com">haz clic aquí</a>.</p>
-</body>
-</html>
+     <meta http-equiv="Refresh" content="0;url=https://jmct1980.github.io/dscraft/dscraft/">
+ </head>
+ <body>
+ </body>
