--- a/dscraft/catalogo.html
+++ b/dscraft/catalogo.html
@@ -71,11 +71,11 @@
 <div class="womans_section_2">
        <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_01.png"><img src="images/catalogo/_01.png" alt="Jabon de Avena"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_01.png"><img src="images/catalogo/_01.jpg" alt="Jabon de Avena"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_02.png"><img src="images/catalogo/_02.png" alt="Jabon de Aceite de Rosas"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_02.png"><img src="images/catalogo/_02.jpg" alt="Jabon de Aceite de Rosas"></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -83,11 +83,11 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_03.png"><img src="images/catalogo/_03.png" alt="Jabon de Cafe"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_03.png"><img src="images/catalogo/_03.jpg" alt="Jabon de Cafe"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_04.png"><img src="images/catalogo/_04.png" alt="Jabon de Canela"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_04.png"><img src="images/catalogo/_04.jpg" alt="Jabon de Canela"></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -95,11 +95,11 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_05.png"><img src="/images/catalogo/_05.png" alt="Jabon de Sabila" title="Recuedo de Vela"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_05.png"><img src="/images/catalogo/_05.jpg" alt="Jabon de Sabila" title="Recuedo de Vela"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_06.png"><img src="images/catalogo/_06.png" alt="Jabon de Miel" title="Recuendo de Vela"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_06.png"><img src="images/catalogo/_06.jpg" alt="Jabon de Miel" title="Recuendo de Vela"></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -107,11 +107,11 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_07.png"><img src="images/catalogo/_07.png" alt="Jabon de Arroz"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_07.png"><img src="images/catalogo/_07.jpg" alt="Jabon de Arroz"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_08.png"><img src="images/catalogo/_08.png" alt="Jabon de Rosas" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_08.png"><img src="images/catalogo/_08.jpg" alt="Jabon de Rosas" title=""></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -119,11 +119,11 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_09.png"><img src="images/catalogo/_09.png" alt="Jabon de Maracuya" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_09.png"><img src="images/catalogo/_09.jpg" alt="Jabon de Maracuya" title=""></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_10.png"><img src="images/catalogo/_10.png" alt="Jabon de Canela"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_10.png"><img src="images/catalogo/_10.jpg" alt="Jabon de Canela"></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -131,11 +131,11 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_11.png"><img src="images/catalogo/_11.png" alt="Jabon de Canela" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_11.png"><img src="images/catalogo/_11.jpg" alt="Jabon de Canela" title=""></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_12.png"><img src="images/catalogo/_12.png" alt="Jabon de Sabila"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_12.png"><img src="images/catalogo/_12.jpg" alt="Jabon de Sabila"></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -144,11 +144,11 @@
 			 <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_13.png"><img src="images/catalogo/_13.png" alt="Jabon de Cafe"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_13.png"><img src="images/catalogo/_13.jpg" alt="Jabon de Cafe"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_14.png"><img src="images/catalogo/_14.png" alt="Jabon de Rosa, Jabon de Avena" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_14.png"><img src="images/catalogo/_14.jpg" alt="Jabon de Rosa, Jabon de Avena" title=""></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -157,11 +157,11 @@
                <div class="row">
                   <div class="col-md-6">
 					  
-                     <div class="image_4"><a href="images/catalogo/_15.png"><img src="images/catalogo/_15.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_15.png"><img src="images/catalogo/_15.jpg" alt="jabones" title=""></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_16.png"><img src="images/catalogo/_16.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_16.png"><img src="images/catalogo/_16.jpg" alt="jabones" title=""></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -169,11 +169,11 @@
 		<div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_17.png"><img src="images/catalogo/_17.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_17.png"><img src="images/catalogo/_17.jpg" alt="jabones" title=""></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_18.png"><img src="images/catalogo/_18.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_18.png"><img src="images/catalogo/_18.jpg" alt="jabones" title=""></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -181,11 +181,11 @@
 			 <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_19.png"><img src="images/catalogo/_19.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_19.png"><img src="images/catalogo/_19.jpg" alt="jabones" title=""></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_20.png"><img src="images/catalogo/_20.png" alt="jabones" title=""></a></div>
+                     <div class="image_4"><a href="images/catalogo/_20.png"><img src="images/catalogo/_20.jpg" alt="jabones" title=""></a></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
