--- a/dscraft/kawai1.html
+++ b/dscraft/kawai1.html
@@ -16,13 +16,13 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="/css/style.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="/css/responsive.css">
+      <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="/images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
@@ -30,8 +30,8 @@
       <!-- fonts -->
       <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="/css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="css/owl.carousel.min.css">
+      <link rel="stylesheet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
    </head>
@@ -49,14 +49,14 @@
                   <a href="rosas.html">Rosas Eternas</a>
                   <a href="catalogo.html">Catalogo</a>
                </div>
-               <span style="font-size:30px;cursor:pointer; color: #fff;" onclick="openNav()"><img src="/images/toggle-icon.png" alt=""></span>
+               <span style="font-size:30px;cursor:pointer; color: #fff;" onclick="openNav()"><img src="images/toggle-icon.png" alt=""></span>
                <a class="navbar-brand" href="/index.html"><img src="images/logo_dys.png" alt=""></a>
                <form class="form-inline ">
                   <div class="login_text">
                      <ul>
-                        <li><a href="#"><img src="/images/user-icon.png" alt=""></a></li>
-                        <li><a href="#"><img src="/images/trolly-icon.png" alt=""></a></li>
-                        <li><a href="#"><img src="/images/search-icon.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/user-icon.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/trolly-icon.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/search-icon.png" alt=""></a></li>
                      </ul>
                   </div>
                </form>
