--- a/dscraft/kawai1.html
+++ b/dscraft/kawai1.html
@@ -24,7 +24,7 @@
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- fonts -->
@@ -50,7 +50,7 @@
                   <a href="catalogo.html">Catalogo</a>
                </div>
                <span style="font-size:30px;cursor:pointer; color: #fff;" onclick="openNav()"><img src="images/toggle-icon.png" alt=""></span>
-               <a class="navbar-brand" href="/index.html"><img src="images/logo_dys.png" alt=""></a>
+               <a class="navbar-brand" href="index.html"><img src="images/logo_dys.png" alt=""></a>
                <form class="form-inline ">
                   <div class="login_text">
                      <ul>
