--- a/dscraft/catalogo.html
+++ b/dscraft/catalogo.html
@@ -95,7 +95,7 @@
 			  <div class="womans_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <div class="image_4"><a href="images/catalogo/_05.png"><img src="/images/catalogo/_05.jpg" alt="Jabon de Sabila" title="Recuedo de Vela"></a></div>
+                     <div class="image_4"><a href="images/catalogo/_05.png"><img src="images/catalogo/_05.jpg" alt="Jabon de Sabila" title="Recuedo de Vela"></a></div>
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
@@ -201,7 +201,7 @@
                <div class="footer_logo"><a href="index.html"><img src="images/logoletras1.png" alt="Logo letras D&S"></a></div>
                <div class="social_icon">
                   <ul>
-                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="/images/fb-icon.png" alt="Facebook icon"></a></li>
+                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fb-icon.png" alt="Facebook icon"></a></li>
                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter icon"></a></li>
 <!--                    <li><a href="#"><img src="/images/linkedin-icon.png"></a></li> -->
                      <li><a href="https://www.instagram.com/dscraftpe/"><img src="images/instagram-icon.png" alt="Instagram icon"></a></li>
@@ -242,9 +242,9 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                      <h4 class="adderss_text">Contactanos</h4>
-                     <div class="call_text"><img src="/images/map-icon.png" alt="Maps icon"><span class="paddlin_left_0"><a href="#">MZ 159 C Lote 4 CMT 71 Paradero 11 - José Gálvez , Villa María del Trunfo, Peru</a></span></div>
-                     <div class="call_text"><img src="/images/call-icon.png" alt="Call icon"><span class="paddlin_left_0"><a href="tel:+51955772355">+51955772355</a></span></div>
-                     <div class="call_text"><img src="/images/mail-icon.png" alt="Mail icon"><span class="paddlin_left_0"><a href="#">rict_8415@dscraft.net.pe</a></span></div>
+                     <div class="call_text"><img src="images/map-icon.png" alt="Maps icon"><span class="paddlin_left_0"><a href="#">MZ 159 C Lote 4 CMT 71 Paradero 11 - José Gálvez , Villa María del Trunfo, Peru</a></span></div>
+                     <div class="call_text"><img src="images/call-icon.png" alt="Call icon"><span class="paddlin_left_0"><a href="tel:+51955772355">+51955772355</a></span></div>
+                     <div class="call_text"><img src="images/mail-icon.png" alt="Mail icon"><span class="paddlin_left_0"><a href="#">rict_8415@dscraft.net.pe</a></span></div>
                   </div>
                </div>
             </div>
@@ -260,16 +260,16 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="/js/jquery.min.js"></script>
-      <script src="/js/popper.min.js"></script>
-      <script src="/js/bootstrap.bundle.min.js"></script>
-      <script src="/js/jquery-3.0.0.min.js"></script>
-      <script src="/js/plugin.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="/js/custom.js"></script>
+      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="js/custom.js"></script>
       <!-- javascript --> 
-      <script src="/js/owl.carousel.js"></script>
+      <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
       <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
       <script>
