--- a/dscraft/index.html
+++ b/dscraft/index.html
@@ -133,7 +133,7 @@
                   <div class="container">
                      <div class="row border_1">
                         <div class="col-md-4">
-                           <div class="image_1"><a href="rosas.html"><img src="/images/rosas/rosas.png" style="width:100%" alt="otros"></a></div>
+                           <div class="image_1"><a href="rosas.html"><img src="images/rosas/rosas.png" style="width:100%" alt="otros"></a></div>
                         </div>
                         <div class="col-md-4">
                            <a href="rosas.html"><h1 class="banner_taital">Grandes Ofertas Rosas Eternas</h1></a>
