--- a/dscraft/jabones.html
+++ b/dscraft/jabones.html
@@ -208,7 +208,7 @@
                      <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fb-icon.png" alt="Facebook icon"></a></li>
                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter icon"></a></li>
 <!--                    <li><a href="#"><img src="/images/linkedin-icon.png"></a></li> -->
-                     <li><a href="https://www.instagram.com/dscraftpe/"><img src="/images/instagram-icon.png" alt="Instagram icon"></a></li>
+                     <li><a href="https://www.instagram.com/dscraftpe/"><img src="images/instagram-icon.png" alt="Instagram icon"></a></li>
                      <li><a href="#"><img src="images/youtub-icon.png" alt="Youtube icon"></a></li>
                   </ul>
                </div>
@@ -264,16 +264,16 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="/js/jquery.min.js"></script>
-      <script src="/js/popper.min.js"></script>
-      <script src="/js/bootstrap.bundle.min.js"></script>
-      <script src="/js/jquery-3.0.0.min.js"></script>
-      <script src="/js/plugin.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="/js/custom.js"></script>
+      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="js/custom.js"></script>
       <!-- javascript --> 
-      <script src="/js/owl.carousel.js"></script>
+      <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
       <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
       <script>
