--- a/dscraft/velas.html
+++ b/dscraft/velas.html
@@ -165,7 +165,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/16.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/16.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -177,7 +177,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/18.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/18.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -189,7 +189,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/20.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/20.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -213,7 +213,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/24.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/24.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -225,7 +225,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/26.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/26.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -237,7 +237,7 @@
                      <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-6">
-                     <div class="image_4"><img src="/images/velas/28.jpg" alt="velas"></div>
+                     <div class="image_4"><img src="images/velas/28.jpg" alt="velas"></div>
 					  <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                </div>
@@ -253,7 +253,7 @@
                <div class="footer_logo"><a href="index.html"><img src="images/logoletras1.png" alt="Logo letras D&S"></a></div>
                <div class="social_icon">
                   <ul>
-                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="/images/fb-icon.png" alt="Facebook icon"></a></li>
+                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fb-icon.png" alt="Facebook icon"></a></li>
                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter icon"></a></li>
 <!--                    <li><a href="#"><img src="/images/linkedin-icon.png"></a></li> -->
                      <li><a href="https://www.instagram.com/dscraftpe/"><img src="images/instagram-icon.png" alt="Instagram icon"></a></li>
@@ -312,16 +312,16 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="../js/jquery.min.js"></script>
-      <script src="../js/popper.min.js"></script>
-      <script src="../js/bootstrap.bundle.min.js"></script>
-      <script src="../js/jquery-3.0.0.min.js"></script>
-      <script src="../js/plugin.js"></script>
+      <script src="js/jquery.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
+      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="../js/custom.js"></script>
+      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="js/custom.js"></script>
       <!-- javascript --> 
-      <script src="../js/owl.carousel.js"></script>
+      <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
       <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
       <script>
