--- a/dscraft/index.html
+++ b/dscraft/index.html
@@ -252,7 +252,7 @@
                      <div class="cart_bt_1"><a href="https://api.whatsapp.com/send?phone=51955772355&text=Hola,%20vi%20un%20anuncio%20en%20dscraft%20y%20quisiera%20conocer%20más%20sobre%20tus%20productos">Comprar Ahora</a></div>
                   </div>
                   <div class="col-md-4">
-                     <div class="computer_img"><img src="images/Velas/velas.png" alt="Velas"></div>
+                     <div class="computer_img"><img src="images/velas/velas.png" alt="Velas"></div>
                      <h4 class="computer_text">Velas</h4>
                      <div class="computer_text_main">
  
