--- a/dscraft/catalogo.html
+++ b/dscraft/catalogo.html
@@ -54,9 +54,9 @@
                <form class="form-inline ">
                   <div class="login_text">
                      <ul>
-                        <li><a href="#"><img src="images/user-icon.png" alt="user icon"></a></li>
-                        <li><a href="#"><img src="images/trolly-icon.png" alt="trolly icon"></a></li>
-                        <li><a href="#"><img src="images/search-icon.png" alt="search icon"></a></li>
+                        <li><a href="#"><img src="images/usericon.png" alt="user icon"></a></li>
+                        <li><a href="#"><img src="images/trollyicon.png" alt="trolly icon"></a></li>
+                        <li><a href="#"><img src="images/searchicon.png" alt="search icon"></a></li>
                      </ul>
                   </div>
                </form>
