--- a/dscraft/jabones.html
+++ b/dscraft/jabones.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
 	  <!--ico-->
-	  <link rel="shortcut icon" href="images/logo_dys1.ico" type="image/x-icon">	   
+	  <link rel="shortcut icon" href="images/logodys1.ico" type="image/x-icon">	   
       <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,14 +49,14 @@
                   <a href="rosas.html">Rosas Eternas</a>
                   <a href="catalogo.html">Catalogo</a>
                </div>
-               <span style="font-size:30px;cursor:pointer; color: #fff;" onclick="openNav()"><img src="images/toggle-icon.png" alt="toggle icon"></span>
-               <a class="navbar-brand" href="index.html"><img src="images/logo_dys.png" alt="logo"></a>
+               <span style="font-size:30px;cursor:pointer; color: #fff;" onclick="openNav()"><img src="images/toggleicon.png" alt="toggle icon"></span>
+               <a class="navbar-brand" href="index.html"><img src="images/logodys.png" alt="logo"></a>
                <form class="form-inline ">
                   <div class="login_text">
                      <ul>
-                        <li><a href="#"><img src="images/user-icon.png" alt="user icon"></a></li>
-                        <li><a href="#"><img src="images/trolly-icon.png" alt="trolly icon"></a></li>
-                        <li><a href="#"><img src="images/search-icon.png" alt="search icon"></a></li>
+                        <li><a href="#"><img src="images/usericon.png" alt="user icon"></a></li>
+                        <li><a href="#"><img src="images/trollyicon.png" alt="trolly icon"></a></li>
+                        <li><a href="#"><img src="images/searchicon.png" alt="search icon"></a></li>
                      </ul>
                   </div>
                </form>
@@ -205,11 +205,11 @@
                <div class="footer_logo"><a href="index.html"><img src="images/logoletras1.png" alt="Logo letras D&S"></a></div>
                <div class="social_icon">
                   <ul>
-                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fb-icon.png" alt="Facebook icon"></a></li>
-                     <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter icon"></a></li>
+                     <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fbicon.png" alt="Facebook icon"></a></li>
+                     <li><a href="#"><img src="images/twittericon.png" alt="Twitter icon"></a></li>
 <!--                    <li><a href="#"><img src="/images/linkedin-icon.png"></a></li> -->
-                     <li><a href="https://www.instagram.com/dscraftpe/"><img src="images/instagram-icon.png" alt="Instagram icon"></a></li>
-                     <li><a href="#"><img src="images/youtub-icon.png" alt="Youtube icon"></a></li>
+                     <li><a href="https://www.instagram.com/dscraftpe/"><img src="images/instagramicon.png" alt="Instagram icon"></a></li>
+                     <li><a href="#"><img src="images/youtubicon.png" alt="Youtube icon"></a></li>
                   </ul>
                </div>
             </div>
@@ -246,9 +246,9 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                      <h4 class="adderss_text">Contactanos</h4>
-                     <div class="call_text"><img src="images/map-icon.png" alt="Maps icon"><span class="paddlin_left_0"><a href="#">MZ 159 C Lote 4 CMT 71 Paradero 11 - José Gálvez , Villa María del Trunfo, Peru</a></span></div>
-                     <div class="call_text"><img src="images/call-icon.png" alt="Call icon"><span class="paddlin_left_0"><a href="tel:+51955772355">+51955772355</a></span></div>
-                     <div class="call_text"><img src="images/mail-icon.png" alt="Mail icon"><span class="paddlin_left_0"><a href="#">rict_8415@dscraft.net.pe</a></span></div>
+                     <div class="call_text"><img src="images/mapicon.png" alt="Maps icon"><span class="paddlin_left_0"><a href="#">MZ 159 C Lote 4 CMT 71 Paradero 11 - José Gálvez , Villa María del Trunfo, Peru</a></span></div>
+                     <div class="call_text"><img src="images/callicon.png" alt="Call icon"><span class="paddlin_left_0"><a href="tel:+51955772355">+51955772355</a></span></div>
+                     <div class="call_text"><img src="images/mailicon.png" alt="Mail icon"><span class="paddlin_left_0"><a href="#">rict_8415@dscraft.net.pe</a></span></div>
                   </div>
                </div>
             </div>
