--- a/dscraft/kawai1.html
+++ b/dscraft/kawai1.html
@@ -449,7 +449,7 @@
       <div class="footer_section layout_padding margin_top_90">
          <div class="container">
             <div class="footer_logo_main">
-               <div class="footer_logo"><a href="index.html"><img src="images/logoletrasdys1.png" alt=""></a></div>
+               <div class="footer_logo"><a href="index.html"><img src="images/logoletras1.png" alt=""></a></div>
                <div class="social_icon">
                   <ul>
                      <li><a href="https://www.facebook.com/profile.php?id=100063973482287"><img src="images/fbicon.png" alt=""></a></li>
